samples/_failures_safe/1761479575_1043d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ccd7925.c: In function ‘main’:
./samples/SAFE/__tmp_1ccd7925.c:143:5: error: ‘graph’ undeclared (first use in this function); did you mean ‘Graph’?
  143 |     graph
      |     ^~~~~
      |     Graph
./samples/SAFE/__tmp_1ccd7925.c:143:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1ccd7925.c:143:10: error: expected ‘;’ at end of input
  143 |     graph
      |          ^
      |          ;
./samples/SAFE/__tmp_1ccd7925.c:143:5: error: expected declaration or statement at end of input
  143 |     graph
      |     ^~~~~
